--- a/index.html
+++ b/index.html
@@ -11,19 +11,21 @@
   
 </head>
 <body>
+  <div class="mainCard">
+    <div class="mainCardTitle">
+      <span>P E R F U M E</span>
+    </div>
+    <div class="productTitle">
+    Gabrielle Essence Eau De Parfum
+    </div>
+    A floral, solar and voluptuous interpretation composed by Olivier Polge, 
+    Perfumer-Creator for the House of CHANEL.
 
-  Perfume
+    $149.99
+    $169.99
 
-  Gabrielle Essence Eau De Parfum
-
-  A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-  Perfumer-Creator for the House of CHANEL.
-
-  $149.99
-  $169.99
-
-  Add to Cart
-  
+    Add to Cart
+  </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Isaac K Clifton</a>.
