--- a/index.html
+++ b/index.html
@@ -11,20 +11,36 @@
   
 </head>
 <body>
-  <div class="mainCard">
-    <div class="mainCardTitle">
-      <span>P E R F U M E</span>
+  <div class="fullCard">
+    <div class="photoCard">
+      <img href="./images/image-product-desktop.jpg" alt="The Perfume">
     </div>
-    <div class="productTitle">
-    Gabrielle Essence Eau De Parfum
+    <div class="mainCard">
+
+      <div class="mainCardTitle">
+        <span>P E R F U M E</span>
+      </div>
+
+      <div class="productTitle">
+        <h1>Gabrielle<br>Essence Eau<br>De Parfum</h1>
+      </div>
+
+      <div class="productBody">
+        A floral, solar and voluptuous<br>interpretation composed by<br>Olivier Polge, Perfumer-Creator<br>for the House of CHANEL.<br><br>
+      </div>
+      <div class="pricingParent">
+        <div class="pricingChild1">
+          <h1>$149.99 </h1>
+        </div>
+        <div class="pricingChild2">
+          <s>$169.99<br><br></s>
+        </div>
+      </div>
+      <div class="addToCart">
+        Add to Cart
+      </div>
     </div>
-    A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-    Perfumer-Creator for the House of CHANEL.
-
-    $149.99
-    $169.99
-
-    Add to Cart
+    
   </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
