Some More Stuffs

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <div class="fullCard">
     <div class="photoCard">
-      <img href="./images/image-product-desktop.jpg" alt="The Perfume">
+      <img src="/Users/workexp/Documents/IKC Work Experience/FrontendStarter/images/image-product-desktop.jpg" alt="The Perfume">
     </div>
     <div class="mainCard">
 
