--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <div class="fullCard">
     <div class="photoCard">
-      <img src="/Users/workexp/Documents/IKC Work Experience/FrontendStarter/images/image-product-desktop.jpg" alt="The Perfume">
+      <img src="./images/image-product-desktop.jpg" alt="The Perfume" height="472px" width="315px">
     </div>
     <div class="mainCard">
 
@@ -37,6 +37,7 @@
         </div>
       </div>
       <div class="addToCart">
+        <img src="./images/icon-cart.svg" alt="Add To Cart Icon">
         Add to Cart
       </div>
     </div>
