--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="./style.css">
   
-  <title>Frontend Mentor | Product preview card component</title>
+  <title>Product Thingy</title>
   
 </head>
 <body>
